<resources>
    <string name="app_name">MaterialDesign</string>
    <string name="photo_of_day">Фото дня</string>
    <string name="search_wiki">Найти в Wikipedia</string>
    <string name="wiki_helper">Поищите термин в Wikipedia</string>
    <string name="favourite">Favourite</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>
    <string name="server_request_error">ОШИБКА_СЕРВЕРА</string>
    <string name="project_error">ОШИБКА_ПРИЛОЖЕНИЯ</string>
    <string name="corrupted_data">ПОТЕРЯ_ДАННЫХ</string>
    <string name="reload">RELOAD</string>
    <string name="video_info">Не поддерживает видео материал</string>
    <string name="menu_bab_setting">Setting</string>
    <string name="menu_bab_fav">Favourite</string>
    <string name="menu_nav_view_1">Настройки темы</string>
    <string name="menu_nav_view_2">ViewPager</string>
    <string name="menu_other_fab_exit">Back</string>
    <string name="menu_other_search">Find</string>
    <string name="chip_1">Позавчера</string>
    <string name="chip_2">Вчера</string>
    <string name="chip_3">Сегодня</string>
    <string name="grey_theme">Серая тема</string>
    <string name="red_theme">Красная темя</string>
    <string name="purple_theme">Фиолетовая тема</string>
    <string name="earth">Земля</string>
    <string name="mars">Марс</string>
    <string name="solar_system">Cистема</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menu_nav_view_3">ActivityBottomNavigationView</string>
    <string name="play_video">Открыть видеоролик</string>
    <string name="menu_nav_view_4">Layouts</string>
    <string name="constraint_layout">ConstraintLayout</string>
    <string name="coordinator_layout">CoordinatorLayout</string>
    <string name="motion_layout">MotionLayout</string>
    <string name="test_text">Consumers behavior Consumer behavior involves the processes consumers go through, and reactions they have towards products or services.[10] It has to do with consumption, and the processes consumers go through around purchasing and consuming goods and services.[11] Consumers recognise needs or wants, and go through a process to satisfy these needs. Consumer behavior is the process they go through as customers, which includes types of products purchased, amount spent, frequency of purchases and what influences them to make the purchase decision or not.  Circumstances that influence consumer behavior are varied, with contributions from both internal and external factors.[11] Internal factors include attitudes, needs, motives, preferences and perceptual processes, whilst external factors include marketing activities, social and economic factors, and cultural aspects.[11] Doctor Lars Perner of the University of Southern California claims that there are also physical factors that influence consumer behavior, for example if a consumer is hungry, then this physical feeling of hunger will influence them so that they go and purchase a sandwich to satisfy the hunger.[12]  Consumer decision making There is a model described by Lars Perner which illustrates the decision making process with regards to consumer behavior. It begins with recognition of a problem, the consumer recognises a need or want which has not been satisfied. This leads the consumer to search for information, if it is a low involvement product then the search will be internal, identifying alternatives purely from memory. If the product is high involvement then the search be more thorough, such as reading reviews or reports or asking friends.  The consumer will then evaluate his or her alternatives, comparing price, quality, doing trade-offs between products and narrowing down the choice by eliminating the less appealing products until there is one left. After this has been identified, the consumer will purchase the product.  Finally the consumer will evaluate the purchase decision, and the purchased product, bringing in factors such as value for money, quality of goods and purchase experience.[12] However, this logical process does not always happen this way, people are emotional and irrational creatures. People make decisions with emotion and then justify it with logic according to Robert Caladini Ph.D Psychology.  How the 4P\'s influence consumer behavior The Marketing mix (4 P\'s) are a marketing tool, and stand for Price, Promotion, Product and Placement.  Because consumer behavior is influenced greatly by business to consumer marketing, the 4 P\'s will have an effect on consumer\'s behavior. The price of a good or service is largely determined by the market, as businesses will set their prices to be similar to that of other business so as to remain competitive whilst making a profit. When market prices for a product are high, it will cause consumers to purchase less and use purchased goods for longer periods of time, meaning they are purchasing the product less often. Alternatively, when market prices for a product are low, consumers are more likely to purchase more of the product, and more often.  The way that promotion influences consumer behavior has changed over time. In the past, large promotional campaigns and heavy advertising would convert into sales for a business, but nowadays businesses can have success on products with little or no advertising. This is due to the Internet, and in particular social media. They rely on word of mouth from consumers using social media, and as products trend online, so sales increase as products effectively promote themselves. Thus, promotion by businesses does not necessarily result in consumer behavior trending towards purchasing products.  The way that product influences consumer behavior is through consumer willingness to pay, and consumer preferences. This means that even if a company were to have a long history of products in the market, consumers will still pick a cheaper product over the company in question\'s product if it means they will pay less for something that is very similar. This is due to consumer willingness to pay, or their willingness to part with their money they have earned. Product also influences consumer behavior through customer preferences. For example, take Pepsi vs Coca-Cola, a Pepsi-drinker is less likely to purchase Coca-Cola, even if it is cheaper and more convenient. This is due to the preference of the consumer, and no matter how hard the opposing company tries they will not be able to force the customer to change their mind.  Product placement in the modern era has little influence on consumer behavior, due to the availability of goods online. If a customer can purchase a good from the comfort of their home instead of purchasing in-store, then the placement of products is not going to influence their purchase decision.[13]</string>
	<string name="menu_nav_view_5">Анимация</string>
	<string name="boom">Взрыв</string>
	<string name="constraint">Constraint</string>
	<string name="trajectory_ovement">По траектории</string>
	<string name="sort">Сортировка</string>
	<string name="oblect">Объектная анимация</string>
	<string name="option_1">Опция 1</string>
	<string name="option_2">Опция 2</string>
</resources>