<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_nav_view_1"
        android:icon="@drawable/ic_wikipedia"
        android:title="@string/menu_nav_view_1" />
    <item
        android:id="@+id/menu_nav_view_2"
        android:icon="@drawable/ic_wikipedia"
        android:title="@string/menu_nav_view_2" />
    <item
        android:id="@+id/menu_nav_view_3"
        android:icon="@drawable/ic_wikipedia"
        android:title="@string/menu_nav_view_3" />
    <item
        android:id="@+id/menu_nav_view_4"
        android:icon="@drawable/ic_wikipedia"
        android:title="@string/menu_nav_view_4" />
	<item
        android:id="@+id/menu_nav_view_5"
        android:icon="@drawable/ic_wikipedia"
        android:title="@string/menu_nav_view_5" />
</menu>